// Copyright 2023 DeepMind Technologies Limited
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Protocol buffer to stream text data.
syntax = "proto3";

package multiscope.widget;

option go_package = "multiscope/protos/widget_go_proto";

// Event sent from the UI.
message Event {
  int64 widget_id = 1;

  enum Type {
    UNDEFINED = 0;
    CLICK = 1;
  }

  Type type = 2;
}
